# failure-flags-python

./: Makefile  README.md  pyproject.toml
.circleci/: config.yml
hack/: check-releasable.sh  version-alignment-check.sh
src/failureflags/: __init__.py
test/: behaviors_test.py  demo_test.py  fetch_test.py  invoke_test.py
