[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "failureflags"
version = "0.0.1"
authors = [
  { name="Jeff Nickoloff", email="jeff.nickoloff@gremlin.com" },
]
description = "Failure Flags is a Python SDK for building application-level chaos experiments and reliability tests using the Gremlin Fault Injection platform."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Code" = "https://github.com/gremlin/failure-flags-python"
"Bug Tracker" = "https://github.com/gremlin/failure-flags-python/issues"
